--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 </div>
                 <div class="col-2">
                     <p>Exclusively Available on RedStore</p>
-                    <h1>Smart Band</h1>
+                    <h1>Dior Perfumes</h1>
                     <small>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quam nihil ipsum eius,
                         temporibus quia asperiores voluptatem dolore, enim quibusdam unde consectetur quos reiciendis
