--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redstore | Ecommerce Website Design</title>
+    <title>Redstore | PERFUMES Website Design</title>
     <link rel="stylesheet" href="style.css">
 
     <!-- Preconnect for Google Fonts -->
