--- a/contact.html
+++ b/contact.html
@@ -275,14 +275,14 @@
             <a href="https://www.facebook.com" target="_blank"
               ><i class="fab fa-facebook-f"></i
             ></a>
-            <a href="https://twitter.com/ashu_58_BR?s=08" target="_blank"
+            <a href="https://twitter.com" target="_blank"
               ><i class="fab fa-twitter"></i
             ></a>
             <a href="https://www.instagram.com/" target="_blank"
               ><i class="fab fa-instagram"></i
             ></a>
             <a
-              href="https://www.youtube.com/channel/UCR3IWRZ-3YikoKzT2aiBQng"
+              href="https://www.youtube.com"
               target="_blank"
               ><i class="fab fa-youtube"></i
             ></a>
